--- a/sass/layout/_terimaDokumenAdmin.scss
+++ b/sass/layout/_terimaDokumenAdmin.scss
@@ -54,7 +54,8 @@
         }
       }
 
-      .soa {
+      .soa,
+      .ump {
         width: 100%;
         margin-bottom: 1rem;
 
@@ -99,7 +100,8 @@
         }
       }
 
-      .permintaan {
+      .permintaan,
+      .nominal {
         margin-bottom: 1rem;
         border-radius: 4px;
         box-shadow: 0px 3px 5px #d6d8db;
