--- a/sass/layout/_terimaDokumenAdmin.scss
+++ b/sass/layout/_terimaDokumenAdmin.scss
@@ -48,6 +48,78 @@
         &:last-child {
           text-align: right;
         }
+
+        .fc {
+          text-align: left;
+          background: none;
+
+          span {
+            margin-right: 2rem;
+          }
+
+          /* Customize the label (the container) */
+          &-radio {
+            display: inline-block;
+            position: relative;
+            margin-bottom: 0;
+            margin-right: 2rem;
+            padding-left: 30px;
+            cursor: pointer;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+
+            /* On mouse-over, add a grey background color */
+            &:hover input ~ .checkmark {
+              background-color: #bbb;
+            }
+
+            /* Hide the browser's default radio button */
+            input {
+              position: absolute;
+              opacity: 0;
+              cursor: pointer;
+              height: 0;
+              width: 0;
+
+              /* When the radio button is checked, add a blue background */
+              &:checked ~ .checkmark {
+                background-color: $primary-color;
+              }
+              /* Show the indicator (dot/circle) when checked */
+              &:checked ~ .checkmark:after {
+                display: block;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                width: 6px;
+                height: 6px;
+                border-radius: 50%;
+                background: $accent-color;
+              }
+            }
+
+            /* Create a custom radio button */
+            .checkmark {
+              position: absolute;
+              top: 50%;
+              left: 0;
+              transform: translateY(-50%);
+              height: 20px;
+              width: 20px;
+              background-color: #ddd;
+              border-radius: 50%;
+
+              /* Create the indicator (the dot/circle - hidden when not checked) */
+              &::after {
+                content: "";
+                position: absolute;
+                display: none;
+              }
+            }
+          }
+        }
       }
 
       #kode-utama {
