bikin button action dashboard ump, dll

--- a/sass/layout/_dashboardAdmin.scss
+++ b/sass/layout/_dashboardAdmin.scss
@@ -30,6 +30,10 @@
         background: none;
         font-size: 1rem;
       }
+
+      .docid-ump {
+        display: none;
+      }
     }
 
     &-footer {
