jatuh tempo warning selesai

--- a/sass/layout/_dashboardAdmin.scss
+++ b/sass/layout/_dashboardAdmin.scss
@@ -34,6 +34,11 @@
       .docid-ump {
         display: none;
       }
+
+      .tempo-warning {
+        color: $red-color;
+        animation: kelapKelip 0.6s infinite alternate-reverse;
+      }
     }
 
     &-footer {
