fixed width kolom jatuh tempo

--- a/sass/layout/_dashboardAdmin.scss
+++ b/sass/layout/_dashboardAdmin.scss
@@ -31,13 +31,15 @@
         font-size: 1rem;
       }
 
-      .docid-ump {
-        display: none;
+      .jtempo-data {
+        min-width: 120px;
       }
-
       .tempo-warning {
         color: $red-color;
         animation: kelapKelip 0.6s infinite alternate-reverse;
+      }
+      .docid-ump {
+        display: none;
       }
     }
 
