--- a/sass/layout/_dashboardAdmin.scss
+++ b/sass/layout/_dashboardAdmin.scss
@@ -31,6 +31,9 @@
         font-size: 1rem;
       }
 
+      .fc-data {
+        min-width: 100px;
+      }
       .jtempo-data {
         min-width: 120px;
       }
