admin tambah dokumen (ump field), kabag aa konfirmasi ump

--- a/sass/helpers/_globals.scss
+++ b/sass/helpers/_globals.scss
@@ -149,6 +149,16 @@ button,
         }
       }
 
+      tbody tr {
+        &.hover-effect {
+          cursor: pointer;
+
+          &:hover {
+            background-color: rgba(0, 0, 0, 0.075);
+          }
+        }
+      }
+
       .docid {
         display: none;
       }
